--- a/photo.html
+++ b/photo.html
@@ -16,7 +16,7 @@
 		<div class="row">
 			<ul class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 nav">
                 <li class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1"><a href=""><img src="images/myLogo.png" alt="Trang chủ" style="width: 100%;"></a></li>
-				<li class="nav-item"><a class="nav-link" href="personalWS.html"><i class="far fa-id-badge mr-2"></i>Profile</a></li>
+				<li class="nav-item"><a class="nav-link" href="index.html"><i class="far fa-id-badge mr-2"></i>Profile</a></li>
 				<li class="nav-item"><a class="nav-link" href="photo.html"><i class="fas fa-camera-retro mr-2"></i>Photos</a></li>
 				<li class="nav-item"><a class="nav-link" href="project.html"><i class="fas fa-tasks mr-2"></i>Projects</a></li>
 				<li class="nav-item"><a class="nav-link" href="note.html"><i class="fas fa-pencil-alt mr-2"></i>Notes</a></li>
